kubernetes/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - &host "emqx.${SECRET_DOMAIN}"
      secretName: ${SECRET_DOMAIN/./-}-production-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
